[package]
name = "no-std-tests"
version = "0.0.1"
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]
description = "Tests for no-std environments"
license = "MIT"

[dependencies]
libc = { version = "0.2", default-features = false }
sophon-types = { path = "../sophon-types", default-features = false }
sofbloom = { path = "../sofbloom", default-features = false }
fixed-hash = { version = "0.2", default-features = false }