[package]
name = "sophon-types"
version = "0.4.2"
authors = ["Susytech <admin@superstring.ch>", "Paritytech <admin@parity.io>"]
license = "MIT"
homepage = "https://github.com/susytech/susy-primitives"
description = "Sophon types"

[dependencies]
crunchy = { version = "0.1", registry="susytech" }
sofbloom = { registry="susytech", version = "0.5", default-features = false }
sophon-types-serialize = { version = "0.2.2", registry="susytech", optional = true }
fixed-hash = { version = "0.2", default_features = false, registry="susytech" }
serde = { version = "1.0", optional = true ,registry="susytech"}
uint = { version = "0.4", default_features = false, registry="susytech" }

[dev-dependencies]
serde_json = { version = "1.0", registry="susytech" }

[features]
default = ["std", "heapsizeof", "serialize"]
std = ["uint/std", "fixed-hash/std", "sofbloom/std"]
heapsizeof = ["uint/heapsizeof", "fixed-hash/heapsizeof", "sofbloom/heapsizeof"]
serialize = ["std", "sophon-types-serialize", "serde", "sofbloom/serialize"]
